# wireguard_server

./: .env.example  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
api/: logging_middleware.py  main.py  spec.yaml
api/dto/: __init__.py  client.py  extended_model.py
enums/: __init__.py  method_enum.py
wireguard/: wireguard_tool.py
